11710123_project2/test/test_11710123_9.spl
int compare(int a){
    return a;
}
float compare(int a){
    return a;
}
int main(){
    int k = 0;
    k.a = 10;
    return compare.m;
}